--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 <body>
     <header>
         <div class="header-content">
+            <!--Add your profile picture here -->
+            <img src="senba.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Senbagavalli.P</h1>
             <p>STUDENT</p>
         </div>
@@ -162,7 +164,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
